<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#c4b8e1"
    tools:context=".mvp.MvpFragment">

    <EditText
        android:id="@+id/editTextNum1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_num_1"
        android:inputType="numberDecimal|numberSigned" />

    <EditText
        android:id="@+id/editTextNum2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_num_2"
        android:inputType="numberDecimal|numberSigned" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/result_hint"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"/>

    <Button
        android:id="@+id/buttonSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtract"/>

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"/>

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide" />

</LinearLayout>